syntax = "proto3";

package stock;

import "google/protobuf/empty.proto";
import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.trading.stock";

message PriceUpdate {
  common.Stock stock = 1;
  int32 price = 2;
}

message StockPriceRequest {
  common.Stock stock = 1;
}

message StockPriceResponse {
  common.Stock stock = 1;
  int32 price = 2;
}

// Service for providing stock prices.
service StockService {

  // Unary API to get the current price for a specific stock.
  rpc GetStockPrice(StockPriceRequest) returns (StockPriceResponse);

  // Server streaming API to subscribe to real-time price updates.
  rpc GetPriceUpdates(google.protobuf.Empty) returns (stream PriceUpdate);

}
